[project]
name = "glowing-guide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.0",
    "ipykernel>=7.0.1",
    "langchain>=1.0.2",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.1",
    "langgraph-cli[inmem]>=0.4.4",
    "langsmith>=0.4.38",
    "python-dotenv>=1.1.1",
    "ta>=0.11.0",
    "uvicorn>=0.38.0",
    "yfinance>=0.2.66",
]
